Notification dashboard tweaks

--- a/app/views/psd-cases-area/notifications/notifications-dashboard.html
+++ b/app/views/psd-cases-area/notifications/notifications-dashboard.html
@@ -9,9 +9,13 @@ Home
 
 <div class="govuk-grid-row">
 
-  <h1 class="govuk-heading-l">
-        Product safety notifications
-      </h1>
+  <div style="overflow:hidden; margin-bottom: 20px;">
+
+    <h1 class="govuk-heading-l" style="float:left;">
+          Product safety notifications
+        </h1>
+  
+        <p style="float:right;"><button type="submit" class="govuk-button" data-module="govuk-button" value="Start a new risk assessment" id="submit">Create a new product safety notification</button></p></div>
 
   <div class="govuk-grid-column-one-quarter">
 
@@ -35,12 +39,10 @@ Home
 
     <form class="form govuk-!-margin-bottom-6" action="task-list" method="post">
 
-
-
       <h2 class="govuk-heading-m">Draft product safety
       notifications</h2>
 
-         <table class="govuk-table">
+         <table class="govuk-table" style="margin-bottom: 40px;">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Product name</th>
@@ -86,14 +88,14 @@ Home
       <td class="govuk-table__cell">All in All + Car Seat - buckle failure</p></td>
       <td class="govuk-table__cell">23 April 2023</td>
       <td class="govuk-table__cell">  <strong class="govuk-tag govuk-tag--green" id="company-information-status">Submitted</strong></td>
-      <td class="govuk-table__cell"><a href="edit-submitted">Add further information</a>
+      <td class="govuk-table__cell"><a href="edit-submitted">Update notification</a>
         </td>
     </tr>
 
   </tbody>
 </table>
 
-<p><button type="submit" class="govuk-button" data-module="govuk-button" value="Start a new risk assessment" id="submit">Create a new product safety notification</button></p>
+<!-- <p><button type="submit" class="govuk-button" data-module="govuk-button" value="Start a new risk assessment" id="submit">Create a new product safety notification</button></p> -->
 
 
     </form>
