--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -25,9 +25,9 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
    {% if checked("section-1-complete", "yes") %}
    <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
-    <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
+    <p class="govuk-body-l"><img src="/public/images/car-seat.jpg" width="100px" height="100px" alt="Product Image" align="middle">All in All+ Car Seat, Dragon Kingdom CT4262</p>
      {% if checked("section-1a-complete", "yes") %}
-    <p class="govuk-body-l">All in All+ Car Seat, Fika Forrest CT4243</p>
+    <p class="govuk-body-l"><img src="/public/images/car-seat-2.jpg" width="100px" height="100px" alt="Product Image" align="middle">All in All+ Car Seat, Fika Forrest CT4243</p>
     {% endif %}
 
 
