--- a/app/views/psd-cases-area/notifications/product-search-enhanced-v2.html
+++ b/app/views/psd-cases-area/notifications/product-search-enhanced-v2.html
@@ -131,7 +131,7 @@
 
       <td class="govuk-table__cell">
 
-        <img src="/public/images/no-product-image-small.png"  alt="Product Image" style="float:left">
+       <img src="/public/images/car-seat.jpg" width="80px" height="80px" alt="Product Image" style="float:left">
 
         <div style="float:left; margin-left: 12px">
         <a href="/../../psd-revised-flow/product-page"><b>All in All+ Car Seat, Dragon Kingdom CT4262</b></a>
@@ -155,7 +155,7 @@
 
       <td class="govuk-table__cell">
 
-        <img src="/public/images/no-product-image-small.png"  alt="Product Image" style="float:left">
+        <img src="/public/images/car-seat-2.jpg" width="80px" height="80px" alt="Product Image" style="float:left">
 
         <div style="float:left; margin-left: 12px">
         <a href="/../../psd-revised-flow/product-page-car-seat"><b>All in All+ Car Seat, Fika Forrest CT4243</b></a>
