--- a/app/views/psd-revised-flow/add-business-to-notification/business-role.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-role.html
@@ -103,7 +103,7 @@
               </div>
         
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="role-9" name="role-9" type="checkbox" value="responsible-person">
+              <input class="govuk-checkboxes__input" id="role-9" name="role-9" type="checkbox" value="Responsible-person">
               <label class="govuk-label govuk-checkboxes__label" for="role-9">
                 Responsible person
               </label>
