--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
@@ -156,7 +156,7 @@
       <input type="hidden" name="business-details-legal_name" value="{{ data['business-details-legal_name'] if data['business-details-legal_name'] else "Dreem Manufacturing Ltd" }}" />
       <input type="hidden" name="business-details-ch_number" value="{{ data['business-details-ch_number'] if data['business-details-ch_number'] else "01169426" }}" />
       <input type="hidden" name="business-details-address_1" value="{{ data['business-details-address_1'] if data['business-details-address_1'] else "Building 5, Willow Estate" }}" />
-      <input type="hidden" name="business-details-address_2" value="{{ data['business-details-address_2'] if data['business-details-address_2'] else "Riber RoadLtd" }}" />
+      <input type="hidden" name="business-details-address_2" value="{{ data['business-details-address_2'] if data['business-details-address_2'] else "Riber Road" }}" />
       <input type="hidden" name="business-details-city" value="{{ data['business-details-city'] if data['business-details-city'] else "Buxton" }}" />
       <input type="hidden" name="business-details-county" value="{{ data['business-details-county'] if data['business-details-county'] else "" }}" />
       <input type="hidden" name="business-details-postcode" value="{{ data['business-details-postcode'] if data['business-details-postcode'] else "SK17 6BH" }}" />
