ch number update

--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -90,8 +90,8 @@
     </tr>
     <tr>
       <td class="govuk-table__cell"><a href="#">Academic Trading Ltd</a></td>
-      <td class="govuk-table__cell">01727846</td>
-      <td class="govuk-table__cell">65 Commercial Road, Liverpool, L5 9XE, UK</td>
+      <td class="govuk-table__cell">01547846</td>
+      <td class="govuk-table__cell">21 Macclesfield Road, Manchester, M4 8KH, UK</td>
     </tr>
     <tr>
                     <td class="govuk-table__cell"><a href="#">Adam Worth Ltd</a></td>
