--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -96,7 +96,7 @@
     <tr>
                     <td class="govuk-table__cell"><a href="#">Adam Worth Ltd</a></td>
                     <td class="govuk-table__cell">05845267</td>
-                    <td class="govuk-table__cell">22 Baker's Lane, Little Whinging, WH3 4RT, UK</td>
+                    <td class="govuk-table__cell">22 Bakers Lane, Little Whinging, WH3 4RT, UK</td>
               </tr>
       <tr>
                     <td class="govuk-table__cell"><a href="#">Adaptive Distribution Services</a></td>
@@ -129,7 +129,7 @@
       <tr>
                 <td class="govuk-table__cell"><a href="#">Alchemy Ventures Ltd</td>
                   <td class="govuk-table__cell">00122782</td>
-                  <td class="govuk-table__cell">2 Riverside Walk, Cambridge, CB5 8HN, UK    </td>
+                  <td class="govuk-table__cell">2 Riverside Avenue, Cambridge, CB5 8HN, UK    </td>
                   </tr>
       <tr>
                 <td class="govuk-table__cell"><a href="#">AlphaNex Innovations Ltd</a></td>
