Updates to table and amends

--- a/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-cunningham.html
@@ -34,7 +34,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details">Change<span class="govuk-visually-hidden"> name</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
                       </dd>
                     </div>
 
@@ -46,7 +46,7 @@
                         Cunningham Products Ltd
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
                       </dd>
                     </div>
                     <div class="govuk-summary-list__row">
@@ -57,7 +57,7 @@
                         02076315    <a href="#">(View Companies House record)</a>
                       </dd>
                       <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="edit-business-details">Change<span class="govuk-visually-hidden"> address</span></a>
+                        <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
                       </dd>
                     </div>
                   </dl>
@@ -70,7 +70,7 @@
                         </dt>
                         <dd class="govuk-summary-list__actions">
                           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                          <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
                         </dd>
                       </div>
                     </dl>
@@ -79,12 +79,9 @@
          
         <h2 class="govuk-heading-m govuk-!-margin-top-8">Contact details</h2>
 
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                None available
-                <p class="govuk-body govuk-!-margin-top-2"></p>
-              </dt>
+        <dl class="govuk-summary-list govuk-!-padding-bottom-0">
+          <div class="govuk-summary-list__row ">
+            <p class="govuk-body ">None available</p>
 
             <dd class="govuk-summary-list__value">
               <p class="govuk-body"></p>
@@ -94,7 +91,7 @@
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
                 <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
-                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-business-details">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+                <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
     </ul>
             </dd>
           </div>
