--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business.html
@@ -20,6 +20,9 @@
 
       <form class="form" action="duplicate-business" method="post"> 
 
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="role-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -29,19 +32,20 @@
             </h1>
           </legend>
 
-          <p>We have found a business record with the same <strong>Companies House number</strong>.</p>
-          <p>Select the business record you'd like to continue with.</p>
+          <p>We have found a business record with matching details: <strong>Companies House number</strong> and <strong>address</strong>.</p>
+          <p>Select the record you'd like to continue with.</p>
 
-
-
+        </div>
+      </div>
+    </div>
 
 
           <div class="govuk-grid-row">  
 
 
-            <section class="govuk-grid-column-full opss-panels">
+            <section class="govuk-grid-column-full opss-panels govuk-!-margin-top-0">
 
-              <div class="opss-panels__single govuk-!-margin-right-2">
+              <div class="opss-panels__single govuk-!-margin-right-2 ">
 
                 <h2 class="govuk-heading-m govuk-!-margin-bottom-3" style="color: #333;">Dreem Manufacturing Ltd<br><strong class="govuk-tag govuk-tag--green">
           Record in Product Safety Database
@@ -95,7 +99,7 @@
               Address
             </dt>
             <dd class="govuk-summary-list__value govuk-!-padding-bottom-2">
-              None available
+              Building 5, Willow Estate, Riber Road, Buxton, SK17 6BH, UK
             </dd>
           </div>
           <div class="govuk-summary-list__row">
