--- a/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-dreams.html
@@ -67,12 +67,22 @@
 
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
-                        {{ data['business-details-address_1'] }}
-                        {% if data['business-details-address_2'] %}, {{ data['business-details-address_2'] }}{% endif %}
-                        {% if data['business-details-city'] %}, {{ data['business-details-city'] }}{% endif %}
-                        {% if data['business-details-county'] %}, {{ data['business-details-county'] }}{% endif %}
-                        {% if data['business-details-postcode'] %}, {{ data['business-details-postcode'] }}{% endif %}
-                        {% if data['business-details-country'] %}, {{ data['business-details-country'] }}{% endif %}
+
+                        {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
+                        data['business-details-postcode'], data['business-details-country']] %}
+        
+        {% set rolesString = "" %}
+        {% for role in roles %}
+          {% if role %}
+            {% if rolesString.length > 0 %}
+              {% set rolesString = rolesString + ', ' + role %}
+            {% else %}
+              {% set rolesString = role %}
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+      
+        {{ rolesString }}
                                 </dt>
                         <dd class="govuk-summary-list__actions">
                           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="#">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
@@ -96,12 +106,21 @@
               <p class="govuk-body">{{ data['business-details-email'] }}</p>
               <p class="govuk-body">{{ data['business-details-phone'] }}</p>
               <p class="govuk-body">
-                {{ data['business-details-address_1'] }}
-                {% if data['business-details-address_2'] %}, {{ data['business-details-address_2'] }}{% endif %}
-                {% if data['business-details-city'] %}, {{ data['business-details-city'] }}{% endif %}
-                {% if data['business-details-county'] %}, {{ data['business-details-county'] }}{% endif %}
-                {% if data['business-details-postcode'] %}, {{ data['business-details-postcode'] }}{% endif %}
-                {% if data['business-details-country'] %}, {{ data['business-details-country'] }}{% endif %}
+                {% set roles = [data['business-details-address_1'], data['business-details-address_2'], data['business-details-city'], data['business-details-county'], 
+                data['business-details-postcode'], data['business-details-country']] %}
+
+{% set rolesString = "" %}
+{% for role in roles %}
+  {% if role %}
+    {% if rolesString.length > 0 %}
+      {% set rolesString = rolesString + ', ' + role %}
+    {% else %}
+      {% set rolesString = role %}
+    {% endif %}
+  {% endif %}
+{% endfor %}
+
+{{ rolesString }}
       </p>
             </dd>
             <dd class="govuk-summary-list__actions">
