stop opening in new page

--- a/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-businesses.html
@@ -354,7 +354,7 @@
   const row = document.createElement("tr");
   row.innerHTML = `
     <td class="govuk-table__cell">
-      <a href="${item.url}" target="_blank">${item.name}</a>  <!-- Name as a hyperlink -->
+      <a href="${item.url}">${item.name}</a>  <!-- Name as a hyperlink -->
     </td>
     <td class="govuk-table__cell">${item.companyNumber}</td>
     <td class="govuk-table__cell">${item.address}</td>
